crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@instance.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/file/instance.input
---
Input: module Main where

instance Eq

instance withName :: Eq

instance Eq a where
  eq :: a -> a -> Boolean
  eq _ _ = false

instance Eq a => Ord a where
  ord :: a -> a -> Ordering
  ord _ _ = EQ

instance First

else instance Second

Start { kind: Module }
  Start { kind: ModuleHeader }
    Token { kind: ModuleKw }
    Start { kind: ModuleName }
      Start { kind: Name }
        Token { kind: Upper }
      Finish
    Finish
    Token { kind: WhereKw }
  Finish
  Token { kind: LayoutStart }
  Start { kind: ModuleImports }
    Start { kind: ZeroOrMore }
    Finish
  Finish
  Start { kind: ModuleBody }
    Start { kind: ZeroOrMore }
      Start { kind: InstanceChain }
        Start { kind: InstanceDeclaration }
          Token { kind: InstanceKw }
          Start { kind: QualifiedName }
            Start { kind: Name }
              Token { kind: Upper }
            Finish
          Finish
          Start { kind: ZeroOrMore }
          Finish
        Finish
      Finish
      Token { kind: LayoutSep }
      Start { kind: InstanceChain }
        Start { kind: InstanceDeclaration }
          Token { kind: InstanceKw }
          Start { kind: Name }
            Token { kind: Lower }
          Finish
          Token { kind: Colon2 }
          Start { kind: QualifiedName }
            Start { kind: Name }
              Token { kind: Upper }
            Finish
          Finish
          Start { kind: ZeroOrMore }
          Finish
        Finish
      Finish
      Token { kind: LayoutSep }
      Start { kind: InstanceChain }
        Start { kind: InstanceDeclaration }
          Token { kind: InstanceKw }
          Start { kind: QualifiedName }
            Start { kind: Name }
              Token { kind: Upper }
            Finish
          Finish
          Start { kind: ZeroOrMore }
            Start { kind: VariableType }
              Start { kind: NameRef }
                Token { kind: Lower }
              Finish
            Finish
          Finish
          Token { kind: WhereKw }
          Token { kind: LayoutStart }
          Start { kind: OneOrMore }
            Start { kind: InstanceMemberSignature }
              Start { kind: Name }
                Token { kind: Lower }
              Finish
              Token { kind: Colon2 }
              Start { kind: ArrowType }
                Start { kind: TypeOperatorChain }
                  Start { kind: ApplicationType }
                    Start { kind: VariableType }
                      Start { kind: NameRef }
                        Token { kind: Lower }
                      Finish
                    Finish
                    Start { kind: OneOrMore }
                    Finish
                  Finish
                  Start { kind: OneOrMore }
                  Finish
                Finish
                Token { kind: RightArrow }
                Start { kind: ArrowType }
                  Start { kind: TypeOperatorChain }
                    Start { kind: ApplicationType }
                      Start { kind: VariableType }
                        Start { kind: NameRef }
                          Token { kind: Lower }
                        Finish
                      Finish
                      Start { kind: OneOrMore }
                      Finish
                    Finish
                    Start { kind: OneOrMore }
                    Finish
                  Finish
                  Token { kind: RightArrow }
                  Start { kind: TypeOperatorChain }
                    Start { kind: ApplicationType }
                      Start { kind: ConstructorType }
                        Start { kind: QualifiedName }
                          Start { kind: NameRef }
                            Token { kind: Upper }
                          Finish
                        Finish
                      Finish
                      Start { kind: OneOrMore }
                      Finish
                    Finish
                    Start { kind: OneOrMore }
                    Finish
                  Finish
                Finish
              Finish
            Finish
            Token { kind: LayoutSep }
            Start { kind: InstanceMemberEquation }
              Start { kind: Name }
                Token { kind: Lower }
              Finish
              Start { kind: ZeroOrMore }
                Start { kind: WildcardBinder }
                  Token { kind: Underscore }
                Finish
                Start { kind: WildcardBinder }
                  Token { kind: Underscore }
                Finish
              Finish
              Start { kind: UnconditionalBinding }
                Token { kind: Equal }
                Start { kind: WhereExpression }
                  Start { kind: ExpressionOperatorChain }
                    Start { kind: ExpressionInfixChain }
                      Start { kind: ApplicationExpression }
                        Start { kind: LiteralExpression }
                          Token { kind: LiteralFalse }
                        Finish
                        Start { kind: OneOrMore }
                        Finish
                      Finish
                      Start { kind: OneOrMore }
                      Finish
                    Finish
                    Start { kind: OneOrMore }
                    Finish
                  Finish
                Finish
              Finish
            Finish
          Finish
          Token { kind: LayoutEnd }
        Finish
      Finish
      Token { kind: LayoutSep }
      Start { kind: InstanceChain }
        Start { kind: InstanceDeclaration }
          Token { kind: InstanceKw }
          Start { kind: InstanceAssertions }
            Start { kind: ApplicationType }
              Start { kind: ConstructorType }
                Start { kind: QualifiedName }
                  Start { kind: NameRef }
                    Token { kind: Upper }
                  Finish
                Finish
              Finish
              Start { kind: OneOrMore }
                Start { kind: VariableType }
                  Start { kind: NameRef }
                    Token { kind: Lower }
                  Finish
                Finish
              Finish
            Finish
            Token { kind: RightThickArrow }
          Finish
          Start { kind: QualifiedName }
            Start { kind: Name }
              Token { kind: Upper }
            Finish
          Finish
          Start { kind: ZeroOrMore }
            Start { kind: VariableType }
              Start { kind: NameRef }
                Token { kind: Lower }
              Finish
            Finish
          Finish
          Token { kind: WhereKw }
          Token { kind: LayoutStart }
          Start { kind: OneOrMore }
            Start { kind: InstanceMemberSignature }
              Start { kind: Name }
                Token { kind: Lower }
              Finish
              Token { kind: Colon2 }
              Start { kind: ArrowType }
                Start { kind: TypeOperatorChain }
                  Start { kind: ApplicationType }
                    Start { kind: VariableType }
                      Start { kind: NameRef }
                        Token { kind: Lower }
                      Finish
                    Finish
                    Start { kind: OneOrMore }
                    Finish
                  Finish
                  Start { kind: OneOrMore }
                  Finish
                Finish
                Token { kind: RightArrow }
                Start { kind: ArrowType }
                  Start { kind: TypeOperatorChain }
                    Start { kind: ApplicationType }
                      Start { kind: VariableType }
                        Start { kind: NameRef }
                          Token { kind: Lower }
                        Finish
                      Finish
                      Start { kind: OneOrMore }
                      Finish
                    Finish
                    Start { kind: OneOrMore }
                    Finish
                  Finish
                  Token { kind: RightArrow }
                  Start { kind: TypeOperatorChain }
                    Start { kind: ApplicationType }
                      Start { kind: ConstructorType }
                        Start { kind: QualifiedName }
                          Start { kind: NameRef }
                            Token { kind: Upper }
                          Finish
                        Finish
                      Finish
                      Start { kind: OneOrMore }
                      Finish
                    Finish
                    Start { kind: OneOrMore }
                    Finish
                  Finish
                Finish
              Finish
            Finish
            Token { kind: LayoutSep }
            Start { kind: InstanceMemberEquation }
              Start { kind: Name }
                Token { kind: Lower }
              Finish
              Start { kind: ZeroOrMore }
                Start { kind: WildcardBinder }
                  Token { kind: Underscore }
                Finish
                Start { kind: WildcardBinder }
                  Token { kind: Underscore }
                Finish
              Finish
              Start { kind: UnconditionalBinding }
                Token { kind: Equal }
                Start { kind: WhereExpression }
                  Start { kind: ExpressionOperatorChain }
                    Start { kind: ExpressionInfixChain }
                      Start { kind: ApplicationExpression }
                        Start { kind: ConstructorExpression }
                          Start { kind: QualifiedName }
                            Start { kind: NameRef }
                              Token { kind: Upper }
                            Finish
                          Finish
                        Finish
                        Start { kind: OneOrMore }
                        Finish
                      Finish
                      Start { kind: OneOrMore }
                      Finish
                    Finish
                    Start { kind: OneOrMore }
                    Finish
                  Finish
                Finish
              Finish
            Finish
          Finish
          Token { kind: LayoutEnd }
        Finish
      Finish
      Token { kind: LayoutSep }
      Start { kind: InstanceChain }
        Start { kind: InstanceDeclaration }
          Token { kind: InstanceKw }
          Start { kind: QualifiedName }
            Start { kind: Name }
              Token { kind: Upper }
            Finish
          Finish
          Start { kind: ZeroOrMore }
          Finish
        Finish
        Token { kind: ElseKw }
        Start { kind: InstanceDeclaration }
          Token { kind: InstanceKw }
          Start { kind: QualifiedName }
            Start { kind: Name }
              Token { kind: Upper }
            Finish
          Finish
          Start { kind: ZeroOrMore }
          Finish
        Finish
      Finish
    Finish
  Finish
  Token { kind: LayoutEnd }
Finish
