crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@invalid-record-field.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/failing/expression/invalid-record-field.input
---
Input: { 1: "hello" }

Start { kind: LiteralExpression }
  Start { kind: LiteralRecord }
    Start { kind: Wrapped }
      Token { kind: LeftCurly }
      Start { kind: Separated }
        Start { kind: RecordField }
          Start { kind: Error }
            Token { kind: LiteralInteger }
            Error { message: "expected a label" }
          Finish
          Token { kind: Colon }
          Start { kind: LiteralExpression }
            Token { kind: LiteralString }
          Finish
        Finish
      Finish
      Token { kind: RightCurly }
    Finish
  Finish
Finish
