crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@invalid-record-pun.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/failing/expression/invalid-record-pun.input
---
Input: { "a" }

Start { kind: LiteralExpression }
  Start { kind: LiteralRecord }
    Start { kind: Wrapped }
      Token { kind: LeftCurly }
      Start { kind: Separated }
        Start { kind: RecordField }
          Start { kind: Name }
            Token { kind: Label }
          Finish
          Error { message: "expected Colon, but got RightCurly" }
          Error { message: "expected an expression" }
        Finish
      Finish
      Token { kind: RightCurly }
    Finish
  Finish
Finish
