crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@minus-is-operator-name.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/expression/minus-is-operator-name.input
---
Input: (-)

Start { kind: OperatorNameExpression }
  Start { kind: QualifiedName }
    Start { kind: Wrapped }
      Token { kind: LeftParenthesis }
      Start { kind: NameRef }
        Token { kind: Operator }
      Finish
      Token { kind: RightParenthesis }
    Finish
  Finish
Finish
