crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@minus-is-operator.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/expression/minus-is-operator.input
---
Input: 1 - 2

Start { kind: ExpressionOperatorChain }
  Start { kind: ExpressionInfixChain }
    Start { kind: ApplicationExpression }
      Start { kind: LiteralExpression }
        Token { kind: LiteralInteger }
      Finish
      Start { kind: OneOrMore }
      Finish
    Finish
    Start { kind: OneOrMore }
    Finish
  Finish
  Start { kind: OneOrMore }
    Start { kind: Pair }
      Start { kind: QualifiedName }
        Start { kind: NameRef }
          Token { kind: Operator }
        Finish
      Finish
      Start { kind: ExpressionInfixChain }
        Start { kind: ApplicationExpression }
          Start { kind: LiteralExpression }
            Token { kind: LiteralInteger }
          Finish
          Start { kind: OneOrMore }
          Finish
        Finish
        Start { kind: OneOrMore }
        Finish
      Finish
    Finish
  Finish
Finish
